# AASD_LAB3

./: CMakeLists.txt
Analys/: analys.xlsx
include/: Students.h  analis.h  generate_arr.h  sorts.h  stats.h
src/: main.cc
